Running and fixing some problems from code analysis